.provarCaches/00D5f000005vwGkEAI/objects/rstk__supdmd__c.object
<CustomObject>
    <description>supdmd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_abc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ABC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_comcod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>SupDmds</relationshipLabel>
        <relationshipName>SupDmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_disallowunfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disallow Unfirming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_displaytab__c</fullName>
        <inlineHelpText>Select from picklist values.  Options are

Display All - includes all demands plus Forecast
Exclude Forecast - only includes non-Forecast demands
Only Forecast - only includes Forecast demands

Default is &apos;Display All&apos;</inlineHelpText>
        <label>Display Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display All (Uses the Greater of Forecast vs. Demands)</fullName>
                    <default>true</default>
                    <label>Display All (Uses the Greater of Forecast vs. Demands)</label>
                </value>
                <value>
                    <fullName>Exclude Forecast (Uses Non-Forecast Demands Only)</fullName>
                </value>
                <value>
                    <fullName>Only Forecast (Uses Forecast Demands Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supdmd_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divsupdmds</relationshipLabel>
        <relationshipName>divsupdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Reqd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_firm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_fromdate__c</fullName>
        <defaultValue>TODAY() - 30</defaultValue>
        <inlineHelpText>In order to narrow the time-frame for which to review supplies and demands, enter the starting date desired.  Default is TODAY minus 30 days.</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_homeproj__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Home Project</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_homeproj_ui__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>homeproj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>supdmd1s</relationshipLabel>
        <relationshipName>supdmd1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The item you wish to review.</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>SupDmds</relationshipLabel>
        <relationshipName>SupDmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_icixrid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ICIXR Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_invsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>SupDmds (Site Master)</relationshipLabel>
        <relationshipName>invsitesupdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>SupDmds (Sup UOM)</relationshipLabel>
        <relationshipName>SupDmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_itemdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_itemno__c</fullName>
        <inlineHelpText>The item you wish to review</inlineHelpText>
        <label>Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_lne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_needsfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Needs Firming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_numperiods__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>Enter the number of &quot;periods&quot; you wish displayed.  A &quot;period&quot; is defined under &apos;Date Range Type&apos;.  Default is 12 (and the default for the &quot;period&quot; is months).</inlineHelpText>
        <label>Number of Periods</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_ohbal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Projected On Hand Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_ordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_parentitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>SupDmds (Parent Item)</relationshipLabel>
        <relationshipName>SupDmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_proj__c</fullName>
        <inlineHelpText>The Project in which the Item chosen is to be reviewed.</inlineHelpText>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_proj_ui__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Project in which the Item chosen is to be reviewed.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>SupDmds</relationshipLabel>
        <relationshipName>SupDmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_qtycons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_qtyoh__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>On Hand Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_qtyohnn__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>On Hand Non Nettable</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Outstdg</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Req</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_receiptsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rcpt Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>SupDmds (Rcpt Site)</relationshipLabel>
        <relationshipName>SupDmds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_respinv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter Responsible Planner as filter for Item field (if entered, will only return those Items whose Responsible Planner matches input value).</inlineHelpText>
        <label>Responsible Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>SupDmds</relationshipLabel>
        <relationshipName>SupDmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>supdmds</relationshipLabel>
        <relationshipName>supdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_src_pl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inter-Division</fullName>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Subcontract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supdmd_sts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_styleclass__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Style Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supdmd_todate__c</fullName>
        <defaultValue>TODAY() + 60</defaultValue>
        <inlineHelpText>In order to narrow the time-frame for which to review supplies and demands, enter the ending date desired.  Default is TODAY plus 60 days.</inlineHelpText>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ - SupDmd</label>
    <nameField>
        <label>SupDmdRev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SupDmds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Num_Periods</fullName>
        <active>true</active>
        <errorConditionFormula>AND(rstk__supdmd_numperiods__c &lt;= 0,
rstk__supdmd_numperiods__c&lt;100)</errorConditionFormula>
        <errorDisplayField>rstk__supdmd_numperiods__c</errorDisplayField>
        <errorMessage>Please enter a Number of Periods greater than 0 and less than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Positive_Num_Periods</fullName>
        <active>false</active>
        <errorConditionFormula>rstk__supdmd_numperiods__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>rstk__supdmd_numperiods__c</errorDisplayField>
        <errorMessage>Please enter a Number of Periods greater than 0.</errorMessage>
    </validationRules>
</CustomObject>